--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -3,3 +3,5 @@
   - Added backend form validation
   - Settigns devided into categories
   - Added default values
+1.0.3:
+  - Component namespace error fixed
